--- a/configure/RTL9210B_CG_Lite _RainySummer.cfg
+++ b/configure/RTL9210B_CG_Lite _RainySummer.cfg
@@ -1,7 +1,7 @@
 ;Configure Start
 ;=================FW Configure=================
-U2PHY = 02 f4 9b e0 e1 
-U3PHY = 02 d4 09 00 d5 00 80 
+;U2PHY = 02 f4 9b e0 e1 
+;U3PHY = 02 d4 09 00 d5 00 80 
 
 VID = 0xbda
 PID = 0x9210
@@ -21,18 +21,23 @@ U3_MAXPWR = 0x70
 ASPMDIS = 0x0
 
 ;10 minutes of idle time will disable pcie power
-DISK_IPS_THRES = 0xa
-PCIE_PWRCUT_THRES = 0xa
+DISK_IPS_THRES = 10
+;PCIE_PWRCUT_THRES = 0xa
 
-EN_U1U2 = 0x1
-EN_UPS = 0x0
-PD = 0x0
+;EN_UPS = 0x0
+;PD = 0x0
 
 LED = 0x1
 ;CUSTOMIZED_LED is 15 bytes
 CUSTOMIZED_LED = 00 00 
 SUSPEND_LED_OFF = 0x0
-FAN = 0x0
+SUSPEND_DISK_OFF = 0x7
+;FAN = 0x0
+
+SCSI_WP_PIN = 0xc
+UART_DBG_PIN = 5
+PERIPH_API = 1
+UART_BAUD_RATE = 57600
 
 ;DIS_SHOW_EMPTY_DISK = 0x1
 ;UART_DBG_PIN = 5
