--- a/configure/RTL9210B_CG_Lite _RainySummer.cfg
+++ b/configure/RTL9210B_CG_Lite _RainySummer.cfg
@@ -6,14 +6,13 @@
 VID = 0xbda
 PID = 0x9210
 
-MANUFACTURE = "LZC.app"
+MANUFACTURE = "Seeleo"
 SCSI_VENDOR = "LZC.app"
 PRODUCT = "RainySummer"
 SCSI_PRODUCT = "RainySummer"
-SERIAL = "123456789612"
+SERIAL = "12345678901"
 
-CFEXPRESS = 0x0
-LED = 0x1
+;CFEXPRESS = 0x0
 PINMUX1 = 0x0
 PINMUX2 = 0x0
 U2_MAXPWR = 0xfa
@@ -21,7 +20,7 @@ U3_MAXPWR = 0x70
 ASPMDIS = 0x0
 
 ;10 minutes of idle time will disable pcie power
-DISK_IPS_THRES = 10
+DISK_IPS_THRES = 0xa
 ;PCIE_PWRCUT_THRES = 0xa
 
 ;EN_UPS = 0x0
@@ -29,18 +28,17 @@ DISK_IPS_THRES = 10
 
 LED = 0x1
 ;CUSTOMIZED_LED is 15 bytes
-CUSTOMIZED_LED = 00 00 
+CUSTOMIZED_LED = 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 
 SUSPEND_LED_OFF = 0x0
 SUSPEND_DISK_OFF = 0x7
 ;FAN = 0x0
 
 SCSI_WP_PIN = 0xc
-UART_DBG_PIN = 5
-PERIPH_API = 1
-UART_BAUD_RATE = 57600
+UART_DBG_PIN = 0x5
+;PERIPH_API = 1
+;UART_BAUD_RATE = 57600
 
 ;DIS_SHOW_EMPTY_DISK = 0x1
-;UART_DBG_PIN = 5
 
 ;=================Tool Configure=================
 ;DISCONN_FORCE_USB2 = n
